# EmbeddedCNN

./: .gitignore  CMakeLists.txt  Makefile  Pulp.mk  README.md  filter.c  filter.h  gan.c  gan.h  main.c  main.h  pulpissimo.ld
python/: train.py
python/utils/: data23.py  models.py  quantization.py
src/: CMakeLists.txt  fcn.c  main.c  main.h  profile.c  profile.h
